# cTorch

./: .gitignore  CMakeLists.txt  README.md
cTorch/: CMakeLists.txt  Tensor.cpp  Tensor.hpp
test/: CMakeLists.txt  test.cpp
